# caspian-system

./: .gitignore  CHANGEPOINT_DATE_FIX.md  CHANGEPOINT_FIX.md  Makefile  README.md  bis-date-metric-ingestion.md  metrics-pipeline-architecture.md  pyproject.toml  pytest.ini  test_changepoint_detection.py  test_changepoint_simple.py
database/: vm_direct_metric_data.sql  vm_direct_metric_metadata.sql  vm_direct_metric_rejected.sql  vm_extracted_metrics.sql  vm_extraction_jobs.sql  vm_forecast_config.sql  vm_forecast_job.sql  vm_metric_data.sql  vm_metric_data_timescale.sql  vm_metric_extract_job.sql  vm_metric_metadata.sql  vm_metrics_forecast_metadata.sql
http/: sidecar_write_endpoint_tests.http  vmauth_remote_write_stress_1k.http
notebooks/: README.md  prophet_parameter_tuning.ipynb
observability/grafana/: README.md
observability/grafana/dashboards/: vmj_operations_dashboard.json
scripts/: victoria_metrics_jobs.service  vm_delete_metrics_by_biz_date.py  vm_delete_metrics_by_timestamp.py
tests/: __init__.py  conftest.py  generate_remote_write_payloads.py
tests/fixtures/: __init__.py  example_config_with_db.yml  test_apex_collector.yml  test_common_logging_config.yml  test_empty_config.yml  test_jobs_section.yml  test_no_default_configs.yml  test_no_job_type_config.yml  test_refactored_config.yml  test_refactored_jobs.yml  test_updated_job_configs.yml
tests/generators/: __init__.py  __main__.py  biz_date_input_generator.py
tests/integration/: __init__.py  test_database_integration.py  test_job_execution.py
tests/unit/: __init__.py  test_advisory_locks.py  test_biz_date_input_generator.py  test_config.py  test_consolidated_config.py  test_jobs.py  test_metrics_forecast.py  test_omegaconf_interpolation.py  test_sidecar_service.py
victoria_metrics_jobs/: __init__.py  version.py  victoria_metrics_jobs.py  victoria_metrics_jobs.yml
victoria_metrics_jobs/jobs/: README.md  __init__.py
victoria_metrics_jobs/jobs/apex_collector/: README.md  __init__.py  __main__.py  apex_collector.py
victoria_metrics_jobs/jobs/business_date_converter/: __init__.py  business_date_converter.py
victoria_metrics_jobs/scheduler/: __init__.py  __main__.py  config.py  database.py  jobs.py  logging_config.py  notebooks_file_manager.py  service.py  sidecar_service.py  victoria_metrics.py
(+42 files in other folders)
